refactor: modernize ProductBundle architecture and cleanup sync tests
- Replaced manual entity-to-DTO mapping in ProductBundleService with MapStruct/ProductBundleMapper.
- Transitioned ProductBundle status management from internal Enum to VersionableEntity.EntityStatus.
- Deleted obsolete ProductFeatureSync and ProductPricingSync integration tests (legacy architecture).
- Updated ProductBundleServiceTest with focused guards for status-based modifications (DRAFT only).
- Ensured tenant security consistency by validating bankId across linked products in bundles.